extended /apis return results
