# server/go/api_apis_service_impl.go
@@ -25,7 +25,7 @@ func (s *ApisApiService) GetApis(ctx context.Context, fleet string) (ImplRespons
 		return Response(http.StatusInternalServerError, err), err
 	}
 
-	return Response(http.StatusOK, convertAPIListCRDtoAPIsModel(apis)), nil
+	return Response(http.StatusOK, s.convertAPIListCRDtoAPIsModel(apis)), nil
 }
 
 // GetApi - Get an API instance by namespace and name
@@ -35,7 +35,7 @@ func (s *ApisApiService) GetApi(ctx context.Context, namespace string, name stri
 		return Response(http.StatusInternalServerError, err), err
 	}
 
-	return Response(http.StatusOK, convertAPICRDtoAPIModel(api)), nil
+	return Response(http.StatusOK, s.convertAPICRDtoAPIModel(api)), nil
 }
 
 // GetPostProcessedOpenApiSpec - Get the post-processed OpenAPI spec by API id
@@ -69,17 +69,39 @@ func (s *ApisApiService) GetPostProcessedOpenApiSpec(ctx context.Context, namesp
 	return Response(http.StatusOK, opts), nil
 }
 
-func convertAPIListCRDtoAPIsModel(apis v1alpha1.APIList) []ApiItem {
+func (s *ApisApiService) convertAPIListCRDtoAPIsModel(apis v1alpha1.APIList) []ApiItem {
 	toReturn := []ApiItem{}
 	for _, api := range apis.Items {
-		toReturn = append(toReturn, convertAPICRDtoAPIModel(&api))
+		toReturn = append(toReturn, s.convertAPICRDtoAPIModel(&api))
 	}
 	return toReturn
 }
 
-func convertAPICRDtoAPIModel(api *v1alpha1.API) ApiItem {
-	return ApiItem{
+func (s *ApisApiService) convertAPICRDtoAPIModel(api *v1alpha1.API) ApiItem {
+	parser := spec.NewParser(nil)
+	apiItem := ApiItem{
 		Name:      api.Name,
 		Namespace: api.Namespace,
 	}
+
+	apiSpec, err := parser.ParseFromReader(strings.NewReader(api.Spec.Spec))
+	if err != nil {
+		return apiItem
+	}
+
+	opts, err := spec.GetOptions(apiSpec)
+	if err != nil {
+		return apiItem
+	}
+
+	apiItem.Service = ApiItemService{
+		Name:      opts.Upstream.Service.Name,
+		Namespace: opts.Upstream.Service.Namespace,
+	}
+	apiItem.Fleet = ApiItemFleet{
+		Name:      api.Spec.Fleet.Name,
+		Namespace: api.Spec.Fleet.Namespace,
+	}
+
+	return apiItem
 }
